[tool.poetry]
name = "ll"
version = "0.1.0"
description = ""
authors = ["Jim wsl laptop Steffes <jimsteffes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "0.5.0"
django = "4.0.8"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.3"
wheel = "0.38.1"
whitenoise = "6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
